--- a/vue-Myshop/style.css
+++ b/vue-Myshop/style.css
@@ -134,6 +134,10 @@ input {
 footer {
   margin-top: 70px;
   margin-bottom: 70px;
+  position:absolute;
+   bottom:0;  /* on le colle en bas */
+   width:100%;
+   height:100px;   /* Hauteur du pied de page */
 }
 
 footer .list_pages {
